[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/Player/WallDetector.gd" type="Script" id=1]

[node name="WallDetector" type="Position2D"]
script = ExtResource( 1 )

[node name="RayBottom" type="RayCast2D" parent="."]
modulate = Color( 0.921569, 0, 1, 1 )
position = Vector2( 8, 0 )
enabled = true
exclude_parent = false
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="RayTop" type="RayCast2D" parent="."]
modulate = Color( 0.921569, 0, 1, 1 )
position = Vector2( 8, -18 )
enabled = true
exclude_parent = false
cast_to = Vector2( 20, 0 )
collision_mask = 2
__meta__ = {
"_editor_description_": ""
}
